--- a/estilos/Estilos.css
+++ b/estilos/Estilos.css
@@ -1,5 +1,22 @@
 body{
     text-align: center;
     font-family: "Arial";
-    color: darkblue;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    color: black;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid gray;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
